--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,8 +1,10 @@
 :root {
-    --green: rgb(6, 187, 6);
+    --green: rgba(30, 255, 0, 0.9);
+    --green-hover: rgb(31, 221, 31);
     --gray: gray;
     --background-color: rgb(5, 5, 5);
-    --background-color-key: rgb(15, 15, 15);
+    --background-color-key-hover: rgb(40, 40, 40);
+    --background-color-key: rgba(40, 40, 40, 0.3);
     --white: rgb(240, 240, 240);
     --C-key-color: #c53333;
 }
@@ -13,6 +15,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+    ::after {
+        background-image: url(./assets/images/background.png);
+        background-size: cover;
+        content: '';
+        position: absolute;
+        inset: 0;
+        z-index: -1;
+        filter: blur(2px);
+    }
+
     .App-container {
         width: 300px;
         // background-color: rgb(100, 100, 100);
@@ -55,6 +68,7 @@
         .controler-section {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             height: 60px;
             border-bottom: 1px solid rgba(184, 184, 184, .4);
             .tools {
@@ -70,11 +84,26 @@
                 }
             }
             .delete {
+                box-sizing: content-box;
                 color: var(--green);
                 margin-right: 30px;
                 display: flex;
                 align-items: center;
-                font-size: 1.5rem;
+                width: 25px;
+                height: 25px;
+                
+                border-radius: 50%;
+                padding: 10px;
+                * {
+                    font-size: 1.5rem;
+                }
+                &:hover {
+                    // background-color: var(--green-hover);
+                    * {
+                        transform: scale(0.9);
+                        transform-origin: center center;
+                    }
+                }
             }
         }
         .keypad-container {
@@ -91,17 +120,32 @@
                 justify-content: center;
                 align-items: center;
                 font-size: 1.4rem;
+                
             }
+            .key {
+                transition: all 200ms ease;
+                &:hover {
+                    background-color: var(--background-color-key-hover);
+                    * {
+                        font-size: 1.1rem;
+                    }
+                }
+                * {
+                    background-color: transparent;
+                }
+            }
+            
             .operator {
                 color: var(--green);
+                
             }
             .digit, .dot, .plus-minus, .equal {
                 color: var(--white);
             }
             .equal {
                 background-color: var(--green);
-                * {
-                    background-color: inherit;
+                &:hover {
+                    background-color: var(--green-hover);
                 }
             }
             .dot {
@@ -113,7 +157,6 @@
             .C-key {
                 color: var(--C-key-color);
             }
-            
         }
     }
 
